<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="330dp"
    android:padding="20dp"
    android:layout_gravity="center_horizontal"
    android:layout_height="wrap_content"
    android:background="@drawable/spinner_diamonds_style">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification_dialog_string"
        android:textColor="@color/list_text_color"
        android:textSize="@dimen/toast_font_size" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_question"
            android:text="@string/verification_dialog_cancel"
            android:textSize="@dimen/popup_list_items"
            android:textColor="@color/list_text_color"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/states_buttons" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/proceed_question"
            android:text="@string/verification_dialog_proceed"
            android:textSize="@dimen/popup_list_items"
            android:textColor="@color/list_text_color"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/states_buttons" />

    </LinearLayout>


</LinearLayout>