<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@drawable/listview_border"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="10dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:src="@drawable/paypal_logo" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paypal_message"
        android:textColor="@color/headers_color"
        android:textSize="@dimen/popup_list_items" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:singleLine="true"
        android:text="@string/paypal_fill_price"
        android:textColor="@color/blue_main_color"
        android:textSize="@dimen/toast_font_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/price_input"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/listview_border"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="4"
            android:textColor="@color/headers_color"
            android:textSize="@dimen/big_text_title"
            android:textStyle="bold" />

        <Button
            android:id="@+id/paynow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/states_buttons"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/paypal_pay_btn"
            android:textColor="@color/headers_color"
            android:textSize="@dimen/font_size_headers"/>

    </LinearLayout>


</LinearLayout>