<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/listview_item_border">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/fast_image" />

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/blue_main_color"
        android:textSize="@dimen/font_size_main_buttons"
        android:layout_marginBottom="5dp"
        android:id="@+id/fast_id" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/metal"
            android:textSize="@dimen/popup_list_items"
            android:textColor="@color/converted_price" />

        <TextView
            android:id="@+id/fast_metal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/popup_list_items"
            android:layout_marginLeft="10dp"
            android:textColor="@color/headers_color" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/fast_item_description"
            android:textSize="@dimen/popup_list_items"
            android:textColor="@color/converted_price" />

        <TextView
            android:id="@+id/fast_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/popup_list_items"
            android:layout_marginLeft="10dp"
            android:lineSpacingExtra="5dp"
            android:textColor="@color/headers_color" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/certificate"
            android:textSize="@dimen/popup_list_items"
            android:layout_marginBottom="5dp"
            android:textColor="@color/converted_price" />

        <TextView
            android:id="@+id/fast_certificate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/popup_list_items"
            android:layout_marginLeft="10dp"
            android:textColor="@color/headers_color" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/coins" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_main_buttons"
            android:textColor="@color/price_color"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center_vertical"
            android:id="@+id/fast_price" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_headers"
            android:textColor="@color/converted_price"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center_vertical"
            android:id="@+id/fast_converted" />

    </LinearLayout>


</LinearLayout>