<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:id="@+id/stage_combined"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"
            android:background="@drawable/listview_item_border"
            android:layout_marginBottom="5dp"
            android:scaleType="centerCrop"
            android:id="@+id/stage_image" />

        <!--<ProgressBar-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/poludrags_preloader"-->
            <!--android:layout_gravity="center" />-->

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:background="@drawable/listview_item_border"
            android:padding="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue_main_color"
                android:textSize="@dimen/font_stage_price"
                android:id="@+id/stage_id" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/stage_row_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/popup_list_items"
                        android:textColor="@color/converted_price"
                        android:text="@string/metal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/popup_list_items"
                        android:textColor="@color/headers_color"
                        android:layout_marginLeft="5dp"
                        android:id="@+id/stage_metal" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/popup_list_items"
                    android:textColor="@color/converted_price"
                    android:text="@string/item_description" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textSize="@dimen/popup_list_items"
                    android:textColor="@color/headers_color"
                    android:lineSpacingExtra="5dp"
                    android:id="@+id/item_details" />


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/stage_row_margin">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="bottom"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/popup_list_items"
                            android:textColor="@color/converted_price"
                            android:text="@string/certificate" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/popup_list_items"
                            android:textColor="@color/headers_color"
                            android:layout_marginLeft="5dp"
                            android:id="@+id/stage_certificate" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/coins" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/font_stage_price"
                            android:textColor="@color/price_color"
                            android:layout_marginLeft="5dp"
                            android:id="@+id/stage_price" />

                    </LinearLayout>

                </FrameLayout>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/listview_item_border"
            android:padding="10dp"
            android:layout_marginLeft="5dp"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_states_share"
                android:id="@+id/share" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_states_question"
                android:layout_marginTop="15dp"
                android:id="@+id/question" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_states_palm"
                android:layout_marginTop="15dp"
                android:id="@+id/camera_btn"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_states_add_favorite"
                android:layout_marginTop="15dp"
                android:id="@+id/add_to_favorites"/>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>
